--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 29
+  compileSdkVersion 32
 
   defaultConfig {
     applicationId "com.pluralsight.candycoded"
     minSdkVersion 15
-    targetSdkVersion 29
+    targetSdkVersion 32
     versionCode 1
     versionName "1.0"
 
@@ -24,24 +24,30 @@ android {
     unitTests.returnDefaultValues = true
   }
 
-  sourceSets.test.resources.srcDirs += ["src/main"]
+//  sourceSets.test.resources.srcDirs += ["src/main"]
+  namespace 'com.pluralsight.candycoded'
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_11
+    targetCompatibility JavaVersion.VERSION_11
+  }
+  buildToolsVersion '33.0.1'
 }
 
 dependencies {
   implementation fileTree(dir: "libs", include: ["*.jar"])
-  implementation 'androidx.appcompat:appcompat:1.2.0'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+  implementation 'androidx.appcompat:appcompat:1.5.1'
+  implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
   implementation 'com.loopj.android:android-async-http:1.4.9'
-  implementation 'com.google.code.gson:gson:2.8.0'
+  implementation 'com.google.code.gson:gson:2.9.0'
   implementation 'com.squareup.picasso:picasso:2.5.2'
 
-  testImplementation 'junit:junit:4.12'
+  testImplementation 'junit:junit:4.13.2'
   testImplementation 'com.github.javaparser:javaparser-core:3.0.1'
-  testImplementation "org.powermock:powermock-module-junit4:1.7.1"
-  testImplementation "org.powermock:powermock-api-mockito2:1.7.1"
-  testImplementation "org.powermock:powermock-core:1.7.1"
+  testImplementation "org.powermock:powermock-module-junit4:2.0.9"
+  testImplementation "org.powermock:powermock-api-mockito2:2.0.9"
+  testImplementation "org.powermock:powermock-core:2.0.9"
   testImplementation "org.robolectric:robolectric:3.3.2"
 
-  androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+  androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
